feat: update packager to net9.0

--- a/ModPackager/appsettings.json
+++ b/ModPackager/appsettings.json
@@ -15,7 +15,7 @@
     "VersioningStyle": "Static",
 
     "FileNames": {
-      "SmartAssembly": "{AssemblyDir}\\SA_Release.saproj",
+      "SmartAssembly": "{AssemblyDir}\\{AssemblyName}.saproj",
       "ArchiveName": "{AssemblyName}_v{ModVersion}.zip"
     },
 
@@ -34,6 +34,13 @@
       "SmartAssembly.Attributes.dll",
       "JetBrains.Annotation.dll",
       "Newtonsoft.Json.dll"
+    ],
+
+    "VanillaDependencies": [
+      "Vintagestory.exe",
+      "VintagestoryServer.exe",
+      "VintagestoryAPI.dll",
+      "VintagestoryLib.dll"
     ]
   }
 }
