feat: use mod info generator from existing tooling

--- a/ModPackager/appsettings.json
+++ b/ModPackager/appsettings.json
@@ -1,10 +1,6 @@
 {
   "Serilog": {
-    "MiniumLevel": "Information",
-    "Override": {
-      "Microsoft": "Information",
-      "System": "Warning"
-    }
+    "MinimumLevel": "Information"
   },
 
   "SmartAssembly": {
